--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Basit Ali - Resume</title>
+        <title>Ngô Thượng Bảo</title>
         <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
@@ -23,30 +23,25 @@
             
             <div class="col span-1-of-3 personal">
                 <div class="personal-header">
-                    <img src="resources/img/profile_pic2.png" alt="Profile picture">
-                    <h1>Basit Ali</h1>
+                    <h1>Ngô Thượng Bảo</h1>
                     <p>Software Engineer</p>
                 </div>
                 <div class="personal-details">
                     <div class="personal-info">
                         <ion-icon name="mail"></ion-icon>
-                        <a href="mailto:rjbasitali@gmail.com" target="_blank">rjbasitali@gmail.com</a>
+                        <a href="mailto:1675callmeteebee@gmail.com" target="_blank">1675callmeteebee@gmail.com</a>
                     </div>
                     <div class="personal-info">
                         <ion-icon name="call"></ion-icon>
-                        <a href="tel:0923348054216" target="_blank">+92 334 8054216</a>
+                        <a href="tel:0399227538" target="_blank">+84 399 227538</a>
                     </div>
                     <div class="personal-info">
                         <ion-icon name="logo-linkedin"></ion-icon>
-                        <a href="https://www.linkedin.com/in/rjbasitali/" target="_blank">rjbasitali</a>
+                        <a href="https://www.linkedin.com/in/th%C6%B0%E1%BB%A3ng-b%E1%BA%A3o-ng%C3%B4-b34603333?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank">Ngô Thượng Bảo</a>
                     </div>
                     <div class="personal-info">
                         <ion-icon name="logo-github"></ion-icon>
-                        <a href="https://github.com/rjbasitali" target="_blank">rjbasitali</a>
-                    </div>
-                    <div class="personal-info">
-                        <ion-icon name="globe-outline"></ion-icon>
-                        <a href="https://rjbasitali.com" target="_blank">rjbasitali.com</a>
+                        <a href="https://github.com/wuteebee" target="_blank">wuteebee</a>
                     </div>
 
                     <h3>Education</h3>
@@ -61,8 +56,9 @@
 
                     <h3>Languages</h3>
                     <div class="personal-ed">
-                        <p class="personal-ed-bold">Urdu <span>(Native)</span></p>
+                        <p class="personal-ed-bold">Vietnamese <span>(Native)</span></p>
                         <p class="personal-ed-bold">English <span>(Professional)</span></p>
+                        
                     </div>
 
                     <h3>Interests</h3>
