--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 
                     <h3>Education</h3>
                     <div class="personal-ed">
-                        <p class="personal-ed-bold">BS in Software Engineering</p>
-                        <p class="personal-ed-light">University of Karachi<br>2012 - 2015</p>
+                        <p class="personal-ed-bold">Study</p>
+                        <p class="personal-ed-light">Saigon University<br>2023 - now</p>
                     </div>
                     <div class="personal-ed">
-                        <p class="personal-ed-bold">Intermediate (Pre-Engineering)</p>
-                        <p class="personal-ed-light">PECHS College Karachi<br>2006 - 2008</p>
+                        <p class="personal-ed-bold">Graduate</p>
+                        <p class="personal-ed-light">Mac Dinh Chi High School<br>2020 - </p>
                     </div>
 
                     <h3>Languages</h3>
@@ -63,10 +63,10 @@
 
                     <h3>Interests</h3>
                     <div class="personal-ed">
-                        <p class="personal-ed-light">Digital Painting</p>
-                        <p class="personal-ed-light">Football</p>
-                        <p class="personal-ed-light">Swimming</p>
                         <p class="personal-ed-light">Games</p>
+                        <p class="personal-ed-light">Gym</p>
+                        <p class="personal-ed-light">Swimming</p>
+                        <p class="personal-ed-light">Reading bookbook</p>
                     </div>
 
                 </div>
@@ -77,7 +77,7 @@
                     <ion-icon name="person"></ion-icon>
                     <h2>Career Profile</h2>
                 </div>
-                <p class="main-desc">I'm passionate about programming for its thrill of problem solving and to create something new and future proof. I love exploring and learning new technologies, frameworks and programming languages. Writing efficient & low latency code, keeping it simple, and using best coding and architectural practices are my priorities when programming.
+                <p class="main-desc">I'm a student at Saigon University with passion about programming and creating some new unique things. I love learning useful techniques to neatly handle when it comes to problem. My aim is to become a backend dev first for a stable income, giving me actual experience about programming. Then i want to be a full-stack dev for which I can earn more money and understand more clearly my career 
                 </p>
 
                 <div class="main-heading">
@@ -103,7 +103,7 @@
 -->
 
                 <!-- SpaceHost -->
-                <div class="exp-head clearfix">
+<!--                 <div class="exp-head clearfix">
                     <p class="exp-title">Senior Software Developer</p>
                     <p class="exp-duration">December 2022 - Present</p>    
                 </div>
@@ -124,11 +124,11 @@
                     <li>Monitoring / Observability</li>
                     <li>System Design</li>
                     <li>DevOps</li>
-                </ul>
+                </ul> -->
 
 
                 <!-- Railtown -->
-                <div class="exp-head clearfix">
+<!--                 <div class="exp-head clearfix">
                     <p class="exp-title">Senior Software Developer</p>
                     <p class="exp-duration">December 2020 - December 2022</p>    
                 </div>
@@ -141,11 +141,11 @@
                     <li>PostgreSQL</li>
                     <li>React ( TypeScript/HTML/CSS )</li>
                     <li>WebRTC / VoIP</li>
-                </ul>
+                </ul> -->
 
 
                 <!-- Intigral -->
-                <div class="exp-head clearfix">
+<!--                 <div class="exp-head clearfix">
                     <p class="exp-title">Senior Java Developer</p>
                     <p class="exp-duration">August 2020 - December 2020</p>    
                 </div>
@@ -159,11 +159,11 @@
                     <li>PostgreSQL</li>
                     <li>Redis</li>
                     <li>Amazon Web Services</li>
-                </ul>
+                </ul> -->
                 
 
                 <!-- Oraan -->
-                <div class="exp-head clearfix">
+<!--                 <div class="exp-head clearfix">
                     <p class="exp-title">Senior Software Engineer</p>
                     <p class="exp-duration">April 2019 - July 2020</p>    
                 </div>
@@ -179,10 +179,10 @@
                     <li>Keycloak</li>
                     <li>Google Cloud Platform</li>
                 </ul>
-
+ -->
 
                 <!-- Health at Hand -->
-                <div class="exp-head clearfix">
+<!--                 <div class="exp-head clearfix">
                     <p class="exp-title">Senior Application Engineer</p>
                     <p class="exp-duration">May 2017 - April 2019</p>    
                 </div>
@@ -192,22 +192,22 @@
                 <ul class="exp-items">
                     <li><a href="https://play.google.com/store/apps/details?id=com.patient.myhealthathand" target="_blank">Health at Hand</a></li>
                     <li><a href="https://play.google.com/store/apps/details?id=com.myhealthathand.livedoc" target="_blank">LiveDoc</a></li>
-                </ul>
+                </ul> -->
 
 
                 <!-- NextGenI -->
-                <div class="exp-head clearfix">
+<!--                 <div class="exp-head clearfix">
                     <p class="exp-title">Senior Application Engineer</p>
                     <p class="exp-duration">April 2016 - April 2019</p>    
                 </div>
                 <p class="exp-place">NextGenI, Karachi</p>
                 <p class="exp-desc">Next Generation Innovations is a technology solutions company specializing in startups where I worked as Senior Android Developer on delivering various interesting and challenging products.</p>
                 <ul class="exp-items">
-                </ul>
+                </ul> -->
 
 
                 <!-- Nest I/O -->
-                <div class="exp-head clearfix">
+<!--                 <div class="exp-head clearfix">
                     <p class="exp-title">Founding CTO</p>
                     <p class="exp-duration">June 2015 - April 2016</p>    
                 </div>
@@ -215,7 +215,7 @@
                 <p class="exp-desc">Incubated at Nest I/O for IOTechnica, a startup on IoT and home automation co-founded by me.</p>
                 <ul class="exp-items">
                     <li><a href="https://thenestio.com/startup/iotechnica/" target="_blank">IOTechnica</a></li>
-                </ul>
+                </ul> -->
 
 
                 <!-- Projects -->
@@ -264,7 +264,7 @@
                 <div class="skills">
                     <div class="skill-container">
                         <div class="col span-1-of-3 skill-title">
-                            Go
+                          Communicate
                         </div>
                         <div class="col span-2-of-3 skill-bg">
                             <div class="skill-fg" style="width: 90%;"></div>
@@ -272,7 +272,7 @@
                     </div>
                     <div class="skill-container">
                         <div class="col span-1-of-3 skill-title">
-                            Databases
+                            Language
                         </div>
                         <div class="col span-2-of-3 skill-bg">
                             <div class="skill-fg" style="width: 90%;"></div>
@@ -280,60 +280,13 @@
                     </div>
                     <div class="skill-container">
                         <div class="col span-1-of-3 skill-title">
-                            System Design
+                            Algorithm
                         </div>
                         <div class="col span-2-of-3 skill-bg">
                             <div class="skill-fg" style="width: 90%;"></div>
                         </div>
                     </div>
-                    <div class="skill-container">
-                        <div class="col span-1-of-3 skill-title">
-                            Java & Spring Boot
-                        </div>
-                        <div class="col span-2-of-3 skill-bg">
-                            <div class="skill-fg" style="width: 80%;"></div>
-                        </div>
-                    </div>
-                    <div class="skill-container">
-                        <div class="col span-1-of-3 skill-title">
-                            Linux / Bash
-                        </div>
-                        <div class="col span-2-of-3 skill-bg">
-                            <div class="skill-fg" style="width: 80%;"></div>
-                        </div>
-                    </div>
-                    <div class="skill-container">
-                        <div class="col span-1-of-3 skill-title">
-                            Containers / Docker
-                        </div>
-                        <div class="col span-2-of-3 skill-bg">
-                            <div class="skill-fg" style="width: 80%;"></div>
-                        </div>
-                    </div>
-                    <div class="skill-container">
-                        <div class="col span-1-of-3 skill-title">
-                            GCP / AWS / DO
-                        </div>
-                        <div class="col span-2-of-3 skill-bg">
-                            <div class="skill-fg" style="width: 80%;"></div>
-                        </div>
-                    </div>
-                    <div class="skill-container">
-                        <div class="col span-1-of-3 skill-title">
-                            JavaScript / TypeScript
-                        </div>
-                        <div class="col span-2-of-3 skill-bg">
-                            <div class="skill-fg" style="width: 70%;"></div>
-                        </div>
-                    </div>
-                    <div class="skill-container">
-                        <div class="col span-1-of-3 skill-title">
-                            HTML5 / CSS
-                        </div>
-                        <div class="col span-2-of-3 skill-bg">
-                            <div class="skill-fg" style="width: 70%;"></div>
-                        </div>
-                    </div>
+                    
                 </div>
 
             </div>
