--- a/index.html
+++ b/index.html
@@ -84,24 +84,22 @@
                     <ion-icon name="briefcase"></ion-icon>
                     <h2>Experiences</h2>
                 </div>
-<!-- Remotebase
+
                 
                 <div class="exp-head clearfix">
-                    <p class="exp-title">Senior Software Engineer</p>
-                    <p class="exp-duration">August 2023 - Present</p>    
+                    <p class="exp-title"><a href="https://github.com/wuteebee/OOP-Thu-Vien" target="_blank">Java OOP</a></p>    
                 </div>
                 <p class="exp-place">Remotebase, Karachi (Remote)</p>
                 <p class="exp-desc">Railtown Ventures is a Canadian quest lab, which turns ideas into great ventures. Here I'm working on a startup called SparkScience, which provides video conferencing and other VoIP solutions.
                     My role at SparkScience is to implement features on the backend and frontend using following technologies and more:</p>
-                <ul class="exp-items">
+<!--                 <ul class="exp-items">
                     <li>Go / Golang </li>
                     <li>Web Services ( gin )</li>
                     <li>PostgreSQL</li>
                     <li>Redis</li>
                     <li>Async Processing</li>
                 </ul>
--->
-
+ -->
                 <!-- SpaceHost -->
 <!--                 <div class="exp-head clearfix">
                     <p class="exp-title">Senior Software Developer</p>
