--- a/index.html
+++ b/index.html
@@ -89,9 +89,12 @@
                 <div class="exp-head clearfix">
                     <p class="exp-title"><a href="https://github.com/wuteebee/OOP-Thu-Vien" target="_blank">Java OOP</a></p>    
                 </div>
-                <p class="exp-place">Remotebase, Karachi (Remote)</p>
-                <p class="exp-desc">Railtown Ventures is a Canadian quest lab, which turns ideas into great ventures. Here I'm working on a startup called SparkScience, which provides video conferencing and other VoIP solutions.
-                    My role at SparkScience is to implement features on the backend and frontend using following technologies and more:</p>
+                <p class="exp-desc">Library management program, supports book import and export, book lending, penalty system and statistics.</p>
+
+                <div class="exp-head clearfix">
+                    <p class="exp-title"><a href="https://github.com/tuankhoi18/Security-and-Privacy-of-the-Metaversen" target="_blank">Scientific Research Methodology</a></p>    
+                </div>
+                <p class="exp-desc">Research paper on information security and safety in the Internet Metaverse model, currently in progress.</p>
 <!--                 <ul class="exp-items">
                     <li>Go / Golang </li>
                     <li>Web Services ( gin )</li>
