--- a/index.html
+++ b/index.html
@@ -61,13 +61,6 @@
                         
                     </div>
 
-                    <h3>Interests</h3>
-                    <div class="personal-ed">
-                        <p class="personal-ed-light">Games</p>
-                        <p class="personal-ed-light">Gym</p>
-                        <p class="personal-ed-light">Swimming</p>
-                        <p class="personal-ed-light">Reading bookbook</p>
-                    </div>
 
                 </div>
             </div>
@@ -268,7 +261,7 @@
                           Communicate
                         </div>
                         <div class="col span-2-of-3 skill-bg">
-                            <div class="skill-fg" style="width: 90%;"></div>
+                            <div class="skill-fg" style="width: 95%;"></div>
                         </div>
                     </div>
                     <div class="skill-container">
@@ -284,7 +277,15 @@
                             Algorithm
                         </div>
                         <div class="col span-2-of-3 skill-bg">
-                            <div class="skill-fg" style="width: 90%;"></div>
+                            <div class="skill-fg" style="width: 55%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill-container">
+                        <div class="col span-1-of-3 skill-title">
+                            Programming
+                        </div>
+                        <div class="col span-2-of-3 skill-bg">
+                            <div class="skill-fg" style="width: 70%;"></div>
                         </div>
                     </div>
                     
